--- a/app/xxx_clg/template/input_form_select.html
+++ b/app/xxx_clg/template/input_form_select.html
@@ -3,7 +3,8 @@
 <div class="action">
 <h3>Select Data</h3>
 <p>
-Click on an image pair to use it as the algorithm input.
+Click on an image pair to use it as the algorithm input.<br>
+Note: color images will be converted to grayscale before running the algorithm.
 </p>
 <div style="max-height:30em; overflow:auto;">
 %for id in sorted(inputd.keys()):
